--- a/package.json
+++ b/package.json
@@ -1,20 +1,9 @@
 {
   "scripts": {
-    "start": "nodemon src/index.js -e js"
+    "start": "nodemon src/index.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "connect-flash": "^0.1.1",
-    "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "moment": "^2.24.0",
-    "multer": "^1.4.2",
-    "mysql2": "^2.1.0",
-    "nodemon": "^2.0.2",
-    "nunjucks": "^3.2.0",
-    "pg": "^7.17.0",
-    "sequelize": "^5.21.3",
-    "session-file-store": "^1.3.1"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
